--- a/Client/Dt.Shell.Droid/App.xaml
+++ b/Client/Dt.Shell.Droid/App.xaml
@@ -1,6 +1,7 @@
-﻿<Application
-    x:Class="Dt.Shell.App"
+﻿<a:BaseApp
+    x:Class="Dt.Sample.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:a="using:Dt.Base">
 
-</Application>
+</a:BaseApp>
