--- a/Client/Dt.Shell.IOS/App.xaml
+++ b/Client/Dt.Shell.IOS/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application
-    x:Class="Dt.Shell.App"
+    x:Class="Dt.Sample.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    RequestedTheme="Light">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
 </Application>
