--- a/Client/Dt.App/Home/DefaultLogin.xaml
+++ b/Client/Dt.App/Home/DefaultLogin.xaml
@@ -37,7 +37,8 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <ProgressRing x:Name="Progress" Foreground="White" Background="{StaticResource 主蓝}" IsActive="True" Width="40" Height="40"/>
+            <!-- WinUI未实现 -->
+            <!--<ProgressRing x:Name="Progress" Foreground="White" Background="{StaticResource 主蓝}" IsActive="True" Width="40" Height="40"/>-->
             <TextBlock x:Name="InfoBlock" Text="正在登录..." TextWrapping="Wrap" Margin="10" Grid.Row="1" />
         </Grid>
 
