--- a/Tools/DtTemplates/PrjTemplate/Client/App.xaml
+++ b/Tools/DtTemplates/PrjTemplate/Client/App.xaml
@@ -1,5 +1,5 @@
 ﻿<a:BaseApp
-    x:Class="$safeprojectname$.App"
+    x:Class="$ext_safeprojectname$.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
