--- a/Tools/DtTemplates/PrjTemplate/Client/Home.xaml
+++ b/Tools/DtTemplates/PrjTemplate/Client/Home.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="$safeprojectname$.Home"
+    x:Class="$ext_safeprojectname$.Home"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
