Kit.Msg Kit.Warn增加动态调整信息的功能

--- a/Client/Dt.Sample/Structure/NotifyDemo.xaml
+++ b/Client/Dt.Sample/Structure/NotifyDemo.xaml
@@ -11,5 +11,6 @@
 
         <Button Content="显示提示信息" Click="OnShowNotify" />
         <Button Content="显示带按钮的提示内容" Click="OnCustomNotify" />
+        <Button Content="动态信息 动态样式 动态按钮" Click="OnEditNotify" />
     </StackPanel>
 </a:Win>
