--- a/Client/Dt.Sample/Structure/NotifyDemo.xaml
+++ b/Client/Dt.Sample/Structure/NotifyDemo.xaml
@@ -12,5 +12,8 @@
         <Button Content="显示提示信息" Click="OnShowNotify" />
         <Button Content="显示带按钮的提示内容" Click="OnCustomNotify" />
         <Button Content="动态信息 动态样式 动态按钮" Click="OnEditNotify" />
+
+        <Button Content="普通Toast通知" Click="OnCommonToast" Margin="0,40,0,0" />
+        <Button Content="带自启动的Toast通知" Click="OnParamsToast" />
     </StackPanel>
 </a:Win>
