--- a/Client/Dt.App/Home/DefaultLogin.xaml
+++ b/Client/Dt.App/Home/DefaultLogin.xaml
@@ -36,9 +36,8 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <!-- WinUI未实现 -->
-            <!--<ProgressRing x:Name="Progress" Foreground="White" Background="{StaticResource 主蓝}" IsActive="True" Width="40" Height="40"/>-->
-            <TextBlock x:Name="InfoBlock" Text="正在登录..." TextWrapping="Wrap" Margin="10" Grid.Row="1" />
+            <ProgressRing Foreground="White" Background="{StaticResource 主蓝}" IsActive="True" Width="40" Height="40"/>
+            <TextBlock Text="正在登录..." TextWrapping="Wrap" Margin="10" Grid.Row="1" />
         </Grid>
 
         <StackPanel x:Name="LoginPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2">
