--- a/Client/Dt.Base/Structure/Tools/SysTrace.xaml
+++ b/Client/Dt.Base/Structure/Tools/SysTrace.xaml
@@ -1,35 +1,28 @@
-﻿<a:Win
+﻿<a:Dlg
     x:Class="Dt.Base.Tools.SysTrace"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    Title="系统日志"
-    AutoSaveLayout="False">
+    xmlns:a="using:Dt.Base">
 
-    <a:Main>
-        <a:Tabs>
-            <a:Tab Title="系统日志">
-                <a:Tab.Menu>
-                    <a:Menu>
-                        <a:Mi ID="清空" Icon="垃圾箱" Click="OnClear" />
-                        <a:Mi ID="存根代码" Icon="链接" Click="OnStub" />
-                        <a:Mi ID="本地库" Icon="数据库" Click="OnLocalDb" />
-                        <a:Mi ID="本地文件" Icon="文件夹" Click="OnLocalFiles" />
-                        <a:Mi ID="库路径" Icon="数据库" Click="OnLocalPath" />
-                        <a:Mi ID="安装路径" Icon="文件夹" Click="OnInstallPath" />
-                        <a:Mi ID="操作系统" Icon="服务器" Click="OnHostOS" />
-                        <a:Mi ID="页面类型" Icon="文件" Click="OnPageType" />
-                    </a:Menu>
-                </a:Tab.Menu>
-                <a:Lv x:Name="_lv" AutoScrollBottom="True" Background="Black" SelectionMode="None" ItemHeight="NaN">
-                    <DataTemplate>
-                        <StackPanel Padding="10,0,10,10">
-                            <a:Dot ID="Title" />
-                            <a:Dot ID="Message" Foreground="White" />
-                        </StackPanel>
-                    </DataTemplate>
-                </a:Lv>
-            </a:Tab>
-        </a:Tabs>
-    </a:Main>
-</a:Win>
+    <a:Dlg.Menu>
+        <a:Menu>
+            <a:Mi ID="清空" Icon="垃圾箱" Click="OnClear" />
+            <a:Mi ID="存根代码" Icon="链接" Click="OnStub" />
+            <a:Mi ID="本地库" Icon="数据库" Click="OnLocalDb" />
+            <a:Mi ID="本地文件" Icon="文件" Click="OnLocalFiles" />
+            <a:Mi ID="页面类型" Icon="地址" Click="OnPageType" />
+            <a:Mi ID="库路径" Icon="文件夹" Click="OnLocalPath" />
+            <a:Mi ID="安装路径" Icon="文件夹" Click="OnInstallPath" />
+            <a:Mi ID="操作系统" Icon="服务器" Click="OnHostOS" />
+        </a:Menu>
+    </a:Dlg.Menu>
+
+    <a:Lv x:Name="_lv" AutoScrollBottom="True" Background="Black" SelectionMode="None" ItemHeight="NaN">
+        <DataTemplate>
+            <StackPanel Padding="10,0,10,10">
+                <a:Dot ID="Title" />
+                <a:Dot ID="Message" Foreground="White" />
+            </StackPanel>
+        </DataTemplate>
+    </a:Lv>
+</a:Dlg>
