--- a/Client/Dt.Sample/Base/RouteEventDemo.xaml
+++ b/Client/Dt.Sample/Base/RouteEventDemo.xaml
@@ -7,36 +7,61 @@
     mc:Ignorable="d"
     xmlns:a="using:Dt.Base">
 
-    <ScrollViewer HorizontalScrollMode="Disabled" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
-        <StackPanel Background="Transparent">
-            <StackPanel x:Name="_bdSingle" Background="Moccasin" Height="100">
-                <TextBlock Text="自身事件触发" TextAlignment="Center" Margin="0,10,0,0" />
-                <TextBlock x:Name="_tbSingle" TextWrapping="Wrap" />
-            </StackPanel>
-            <Border x:Name="_bdParent" Background="Gray" Padding="10" Height="200" Grid.Row="1">
-                <StackPanel x:Name="_bdChild" Background="Beige">
-                    <TextBlock Text="父子事件路由" TextAlignment="Center" Margin="0,10,0,0" />
-                    <ToggleSwitch x:Name="_cbHandled" OnContent="标志已处理" OffContent="未标志处理" />
-                    <TextBlock x:Name="_tbRoute" TextWrapping="Wrap" />
-                </StackPanel>
-            </Border>
-            <Border x:Name="_bdAdd" Background="Aqua" Padding="10" Height="200" Grid.Row="2">
-                <StackPanel x:Name="_bdAddChild" Background="Azure">
-                    <TextBlock Text="父AddHandler事件" TextAlignment="Center" Margin="0,10,0,0" />
-                    <ToggleSwitch x:Name="_cbAdd" OnContent="标志已处理" OffContent="未标志处理" />
-                    <TextBlock x:Name="_tbAdd" TextWrapping="Wrap" />
-                </StackPanel>
-            </Border>
-            <Border Background="Salmon" Padding="10" Height="200" Grid.Row="3">
-                <StackPanel Background="Beige">
-                    <TextBlock Text="TextBox事件" TextAlignment="Center" Margin="0,10,0,0" />
-                    <TextBox KeyUp="OnTbKeyDown" />
-                </StackPanel>
-            </Border>
-            <StackPanel x:Name="_bdHold" Background="Moccasin" Height="100">
-                <TextBlock Text="Holding事件" TextAlignment="Center" Margin="0,10,0,0" />
-                <TextBlock x:Name="_tbHold" TextWrapping="Wrap" />
-            </StackPanel>
-        </StackPanel>
-    </ScrollViewer>
+    <a:Main>
+        <a:Tabs>
+            <a:Tab Order="1" Title="自身事件">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="清除" Icon="删除" Click="OnClear" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <Grid x:Name="_bdSingle" Background="Moccasin">
+                    <StackPanel Padding="10">
+                        <TextBlock Text="自身事件触发" TextAlignment="Center"/>
+                        <TextBlock x:Name="_tbSingle" TextWrapping="Wrap" />
+                    </StackPanel>
+                </Grid>
+            </a:Tab>
+            <a:Tab Order="2" Title="冒泡事件">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi x:Name="_cbHandled" ID="Handled置true" IsCheckable="True" />
+                        <a:Mi ID="清除" Icon="删除" Click="OnClear" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <Border x:Name="_bdParent" Background="Gray" Padding="10">
+                    <Grid x:Name="_bdChild" Background="Beige">
+                        <StackPanel Padding="10">
+                            <TextBlock Text="父子事件路由" TextAlignment="Center" />
+                            <TextBlock x:Name="_tbRoute" TextWrapping="Wrap" />
+                        </StackPanel>
+                    </Grid>
+                </Border>
+            </a:Tab>
+            <a:Tab Order="3" Title="AddHandler">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi x:Name="_cbAdd" ID="Handled置true" IsCheckable="True" />
+                        <a:Mi ID="清除" Icon="删除" Click="OnClear" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <Border x:Name="_bdAddParent" Background="Aqua" Padding="10">
+                    <Grid x:Name="_bdAddChild" Background="Azure">
+                        <StackPanel Padding="10">
+                            <TextBlock Text="父AddHandler事件" TextAlignment="Center" />
+                            <TextBlock x:Name="_tbAdd" TextWrapping="Wrap" />
+                        </StackPanel>
+                    </Grid>
+                </Border>
+            </a:Tab>
+            <a:Tab Order="4" Title="Holding">
+                <Grid x:Name="_bdHold" Background="Moccasin">
+                    <StackPanel>
+                        <TextBlock Text="Holding事件" TextAlignment="Center" Margin="0,10,0,0" />
+                        <TextBlock x:Name="_tbHold" TextWrapping="Wrap" />
+                    </StackPanel>
+                </Grid>
+            </a:Tab>
+        </a:Tabs>
+    </a:Main>
 </a:Win>
