--- a/Client-Stable/Dt.Stable.Shared/App.xaml
+++ b/Client-Stable/Dt.Stable.Shared/App.xaml
@@ -1,7 +1,11 @@
-﻿<Application
+<Application
     x:Class="Dt.Shell.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     RequestedTheme="Light">
-    
+	
+	<Application.Resources>
+		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+	</Application.Resources>
+
 </Application>
