--- a/Client-Stable/Dt.Stable.Shared/ChartPage.xaml
+++ b/Client-Stable/Dt.Stable.Shared/ChartPage.xaml
@@ -1,5 +1,5 @@
-﻿<UserControl
-    x:Class="Dt.Shell.MainWindow"
+﻿<Page
+    x:Class="Dt.Shell.ChartPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
@@ -9,9 +9,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Padding="10">
-            <Button Content="Test1" Click="OnTest1" />
-        </StackPanel>
+        <Button Content="返回" Click="OnBack" Margin="10" />
         <a:Excel x:Name="_excel" Grid.Row="1" />
     </Grid>
-</UserControl>
+</Page>
