--- a/Client-Stable/Dt.Stable.Shared/FilePage.xaml
+++ b/Client-Stable/Dt.Stable.Shared/FilePage.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl
-    x:Class="Dt.Shell.MainWindow"
+﻿<Page
+    x:Class="Dt.Shell.FilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <Grid x:Name="_grid" Background="White">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Button Content="Test1" Click="OnTest1" Margin="10"/>
+        <Button Content="返回" Click="OnBack" Margin="10" />
         <a:Excel x:Name="_excel" Grid.Row="1" />
     </Grid>
-</UserControl>
+</Page>
