解决升级uno4.2.6后，android不自动重新测量布局, ios死循环的问题

--- a/Client-Stable/Dt.Stable.Shared/HomePage.xaml
+++ b/Client-Stable/Dt.Stable.Shared/HomePage.xaml
@@ -5,6 +5,7 @@
 
     <Grid Background="White">
         <StackPanel Orientation="Horizontal" Spacing="20">
+            <Button Click="OnBlank" Content="空内容" />
             <Button Click="OnChart" Content="图表" />
             <Button Content="xls" Tag="MonthProfit.xlsx" Click="OnLoadFile" />
             <Button Content="xml" Tag="MonthProfit.ssxml" Click="OnLoadFile" />
