--- a/Client/Dt.Sample/Styles/TestDemo1.xaml
+++ b/Client/Dt.Sample/Styles/TestDemo1.xaml
@@ -5,14 +5,23 @@
     xmlns:a="using:Dt.Base"
     xmlns:s="using:Dt.Sample">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <Button Content="测试1" Click="OnTest1" />
-            <Button Content="测试2" Click="OnTest2" />
-        </StackPanel>
-    </Grid>
+    <!--<TextBlock Text="Hello" />-->
+    <a:Main>
+        <a:Tabs>
+            <a:Tab Title="主区单视图">
+                <!--<a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="保存" Icon="保存" />
+                        <a:Mi ID="搜索" Icon="搜索" />
+                    </a:Menu>
+                </a:Tab.Menu>-->
+                <StackPanel Margin="10">
+                    <TextBlock Text="Hello" />
+                    <!--<Button Content="切换图标" />-->
+                    <!--<CheckBox Content="禁止关闭" />-->
+                </StackPanel>
+            </a:Tab>
+        </a:Tabs>
+    </a:Main>
+
 </a:Win>
